# TestCoveralls

./: .travis.yml  CMakeLists.txt  README.md
lib/: CMakeLists.txt  MyClass.cpp  MyClass.h
test/: CMakeLists.txt  TestMyClass.cpp
